<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>travel-booking-system</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <!-- Start from Java 8 (project appears to be Java 8) -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Current code uses features (sealed, pattern matching, switch arrows) that require Java 17+ -->
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <build>
        <!-- project sources are in src/ (flat layout in this repo) -->
        <sourceDirectory>${basedir}/src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <!-- Use release to make compilation stricter when JDK matches -->
                    <release>21</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
